# ablavie

./: IDENTITY_SETUP.md  PREFLIGHT_CHECKLIST.md  README.md  RELEASE_SUMMARY.md  SOUL.md  tiered_memory.py
AI_EMPLOYEES/: FINLEY_SOUL.md  OPS_SOUL.md  REACH_SOUL.md  TECHRA_SOUL.md
ai_ceo/: __init__.py
ai_ceo/agents/: __init__.py
ai_ceo/skills/: __init__.py
board-dashboard/: index.html
dashboard/: board-dashboard.html
engine/: .gitignore  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  pyproject.toml
engine/ai_ceo/: cli.py
engine/ai_ceo/agents/: orchestrator.py
engine/ai_ceo/core/: __init__.py  llm_router.py
engine/ai_ceo/memory/: __init__.py  tiered_memory.py
engine/ai_ceo/skills/: registry.py
engine/scripts/: setup_wizard.py  verify.py
engine/tests/: test_core.py
executives/: FINLEY.md  OPS.md  REACH.md  TECHRA.md
scripts/: daily_report.sh  install.sh
templates/: SUB_AGENT_TEMPLATE.md
