[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ceo"
version = "1.0.0"
description = "AI CEO CLI — autonomous business partner (tiered memory + commands)"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ai-ceo = "ai_ceo.cli:cli"

[tool.setuptools.packages.find]
include = ["ai_ceo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
